--- a/index.html
+++ b/index.html
@@ -9,5 +9,21 @@
 </head>
 <body>
     <h1>CHECK OUT</h1>
+    <div class="card-container">
+        <div class="card">
+            <div class="image-container">
+                <img src="./img/61205.png" alt="icon">
+            </div>
+            <div class="content-container">            
+            <h1>Tus Datos</h1>
+            <p>Nombre:Andres David</p>
+            <p>Apellido:Borrais Velandia</p>
+            <p>Correo electronico:aborrais@gmail.com</p>
+            <p>Telefono o movil: 3144823206</p>
+        
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
