--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>CHECK OUT</h1>
+    <div class="title">
+      <h1>CHECK OUT</h1>
+    </div>
     <div class="card-container">
         <div class="card">
 
