--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div class="title">
-      <h1>CHECK OUT</h1>
+      <h1>« CHECK OUT »</h1>
     </div>
     <div class="card-container">
         <div class="card">
 
             <div class="content-container">            
-            <h1>Tus Datos</h1>
-            <p>Nombre:Andres David</p>
-            <p>Apellido:Borrais Velandia</p>
-            <p>Correo electronico:aborrais@gmail.com</p>
+            <h1>Tus Datos »</h1>
+            <p>Nombre: Andres David</p>
+            <p>Apellido: Borrais Velandia</p>
+            <p>Correo electronico: aborrais@gmail.com</p>
             <p>Telefono o movil: 3144823206</p>
         
             </div>
